[package]
name = "rust-codespaces"
version = "0.1.0"
authors = ["Your Name"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"
image = "0.24"
clap = { version = "3", features = ["derive"] }